# SPDependy

./: .gitignore  Cargo.toml  README.md  action.yml  go.mod  main.go  sp.toml
.github/workflows/: build_on_commit.yml
example_actions/.github/workflows/: build_on_commit.yml  test_on_pr.yml
src/: main.rs
src/structs/: args.rs  gh_repo_api.rs  mod.rs  sourcepawn_dependencies.rs
